text overlap fix

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -3,6 +3,7 @@
   > header:first-child {
     h1 {
       font-weight: 300;
+      margin-left: 140px;
     }
     svg {
       width: 140px;
